<resources>
    <string name="app_name">Speed Test Master</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menubottomtest">Test</string>
    <string name="menubottomhistory">History</string>
    <string name="menubottomsettings">Settings</string>
    <string name="connect">Connect</string>
    <string name="go">GO</string>
    <string name="loading">Loading servers…</string>
    <string name="provider">Connected To: %1$s</string>
    <string name="isp">ISP: %1$s</string>
    <string name="error_internet">Unable to connect to the server. Kindly try again later</string>
    <string name="distance">%1$s km</string>
    <string name="change_test_server">Change test server</string>
    <string name="download_mbps">Download Mbps</string>
    <string name="upload_mbps">Upload Mbps</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="ping">Ping</string>
    <string name="jitter">Jitter</string>
    <string name="testhistoryitem_download">%1$s Mbps</string>
    <string name="testhistoryitem_upload">%1$s Mbps</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="help_connections">By selecting multiple option, multiple connections are established
        to the test server to increase performance and accuracy.
    </string>
    <string name="help_servers">
        Premium servers are more fast and accurate. These are servers according to your location nearby you
    </string>
    <string name="help_duration">Duration (in seconds) for both tests download and upload. Minimum is 12 and Maximum is 20 seconds</string>

    <string name="retry">Retry</string>
    <string name="test_duration">Test Duration</string>
    <string name="connection_type">Connection Type</string>
    <string name="premium">Premium</string>
    <string name="free">Free</string>
    <string name="faqs">FAQs</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="test_servers">Test Servers</string>
    <string name="about">About</string>
    <string name="test_again">Test Again</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="share_with_friends">Share speed details with friends</string>
    <string name="share">Hey friend! my internet speed details are below. Kindly send me back yours as well
    by downloading the app from link below:\n
        Downspeed: %1$s \n
        Upspeed: %2$s \n
        Ping: %3$s \n
        Jitter: %4$s \n
        Provider: %5$s \n
        Test Server: %6$s \n
        Download: https://play.google.com/store/apps/details?id=%7$s
    </string>
    <string name="send_to">Send to</string>
    <string name="ms">ms</string>
    <string name="url_privacy_policy">https://sites.google.com/view/speedtestmasterofficial</string>
    <string name="help_about">
        %1$s by marwatsoft \n
        version: %2$s
    </string>
</resources>