<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainFragment"
    android:background="@color/colorBackground">

    <!-- App Name -->


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_go,container_provider"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/txt_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/speedtest"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Go Button -->
    <RelativeLayout
        android:id="@+id/btn_go"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_appname"
        android:visibility="visible"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/bluepulsing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="24dp" />
    </RelativeLayout>
    <!-- Container Info -->
    <LinearLayout
        android:id="@+id/container_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go"
        >
        <TextView
            android:id="@+id/txt_providername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Provider Name"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="16dp"
            android:layout_gravity="center"
             />
        <TextView
            android:id="@+id/txt_testserver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="ISP"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="16dp"
            android:paddingTop="2dp"
            android:layout_gravity="center"
            android:paddingHorizontal="16dp"
            android:background="@drawable/bg_testserver_selected"
            />
        <TextView
            android:id="@+id/txt_changetestserver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_test_server"
            android:textColor="@color/blueLight"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:textFontWeight="600"
            android:textAlignment="center"
            />
    </LinearLayout>


    <!-- Loading -->
    <LinearLayout
        android:id="@+id/container_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            tools:layout_editor_absoluteY="134dp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="18dp"
             />
    </LinearLayout>

    <!-- Error -->
    <LinearLayout
        android:id="@+id/container_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="18dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Retry"
            android:textColor="@color/secondary"
            app:cornerRadius="10dp"
            app:strokeColor="@color/secondary" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/bottomsheet_servers" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>