<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".ui.testmain.TestmainFragment"
    android:paddingTop="16dp"
    android:layout_marginTop="?attr/actionBarSize"
    >
    <!-- Container speed view -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_speedtest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="speedView"
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/txt_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/download_mbps"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:fontFamily="@font/poppins"
        android:textFontWeight="600"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_circle_down_24"
        android:drawableTint="@color/download"
        app:layout_constraintEnd_toStartOf="@+id/txt_upload"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/upload_mbps"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:fontFamily="@font/poppins"
        android:textFontWeight="600"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_circle_up_24"
        android:drawableTint="@color/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_download"
        app:layout_constraintTop_toTopOf="parent"
         />
    <TextView
        android:id="@+id/txt_number_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        android:textSize="22dp"
        android:textColor="@color/quantum_grey"
        app:layout_constraintTop_toBottomOf="@+id/txt_download"
        app:layout_constraintStart_toStartOf="@+id/txt_download"
        app:layout_constraintBottom_toTopOf="@+id/container_misc"
        android:fontFamily="@font/gauge_mono_regular"
        />
    <TextView
        android:id="@+id/txt_number_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        android:textSize="22dp"
        android:textColor="@color/quantum_grey"
        app:layout_constraintTop_toBottomOf="@+id/txt_upload"
        app:layout_constraintStart_toStartOf="@+id/txt_upload"
        android:fontFamily="@font/gauge_mono_regular"
        />

    <!-- Misc -->
    <LinearLayout
        android:id="@+id/container_misc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number_download"
        android:paddingHorizontal="16dp"
        >
        <!-- Ping -->
        <LinearLayout
            android:id="@+id/container_ping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/txt_ping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ping"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins"
                android:textFontWeight="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_download"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ms"
                android:textColor="@color/quantum_grey"
                android:layout_marginStart="4dp"
                />
            <TextView
                android:id="@+id/txt_number_ping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins"
                android:textFontWeight="400"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_ping"
                android:drawableTint="@color/ping"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_download"
                app:layout_constraintTop_toTopOf="parent"
                />
        </LinearLayout>
        <!-- Jitter -->
        <LinearLayout
            android:id="@+id/container_jitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/txt_jitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/jitter"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins"
                android:textFontWeight="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_download"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ms"
                android:textColor="@color/quantum_grey"
                android:layout_marginStart="4dp"
                />
            <TextView
                android:id="@+id/txt_number_jitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins"
                android:textFontWeight="400"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_jitter"
                android:drawableTint="@color/jitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_download"
                app:layout_constraintTop_toTopOf="parent"
                />
        </LinearLayout>
    </LinearLayout>
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart_strength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_misc"
        />
    <com.farimarwat.supergaugeview.SuperGaugeView
        android:id="@+id/speedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:duration="1000"
        app:gaugeText="Speed Test"
        />
    <!-- Error -->
    <LinearLayout
        android:id="@+id/container_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="18dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/ButtonConnectionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retry"
            android:textColor="@color/greyPrimary"
            app:cornerRadius="10dp" />
    </LinearLayout>
    <!-- Ad Container -->
    <LinearLayout
        android:id="@+id/container_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internet_speed_booster"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="16dp"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_primary"
                android:layout_margin="8dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/test_again"
                android:textColor="@color/greyPrimary"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
        <pk.farimarwat.modernadmob.AdmobView
            android:id="@+id/myads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:av_HeadlineFontFamily="@font/poppins"
            app:av_HeadlineColor="@color/teal_200"
            app:av_adtype="AD_TYPE_MEDIUM_MINI"
            app:av_backgroundBody="@drawable/bg_adbody"
            app:av_BodyTextFontFamily="@font/poppins"
            app:av_StarRatingColor="@color/yellowPrimary"
            app:av_actionButtonColor="@color/colorCircularProgressBarBackground"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>